--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -30,3 +30,19 @@
     min-width: 50px;
     color: white;
 }
+
+.delete-btn{
+    right: 0;
+    background: #c64141;
+    color: whitesmoke;
+    font-size: 12px;
+    font-weight: bold;
+    outline: none;
+    padding: 4px;
+    border-radius: 8px;
+    position: absolute;
+}
+
+.active_liked{
+    border-bottom: 4px solid green;
+}
